test/types/string/diten/multilineStringLineNumber.good
multilineStringLineNumber.chpl:8: error: Cannot assign to int(64) from real(64)
