test/types/string/diten/multilineStringLineNumber.chpl
var q = """
 Hi, I will error. 
""";



var x: int;
x = 1.5;
